# sliderblend

./: .gitignore  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 13c4a547820c_added_updated_date.py  18a2f41adb77_.py  1c474b8bcdba_refactor_removed_fileunit.py  4918834a52c1_added_user_forignkey_to_document.py  4963bd10d93b_.py  4c8d85c4d5ee_.py  593fb8492896_added_document_name_to_document_model.py  9013fff7a55b_refactor_telegram_username_optional.py  aeecb3d15b55_added_document_forignkey_to_document_.py  c2175c5a1973_added_telegram_user_id.py  c86a976b68c4_.py  d6c66ffb0d52_.py  e02932761088_first_migrate.py  e0666a545b14_temp_chat_id_nullable.py  ea79aa59b531_.py
pages/: base.html  home.html
pages/components/: head.html  header.html  step_indicators.html
pages/partials/: navigation_buttons.html  pagination.html
pages/steps/: base_step.html  step_1.html  step_2.html  step_3.html
prompts/: base_system_prompt.txt
sliderblend/: __init__.py  builder.py  constants.py  main.py  models.py  settings.py  utils.py
sliderblend/bot/: bot.py
sliderblend/internal/: __init__.py  database.py  exceptions.py  ibm_storage.py  main.py  models.py  redis.py
sliderblend/internal/entities/: __init__.py  document.py
sliderblend/pkg/: __init__.py  constants.py  db.py  logger.py  settings.py  template_loader.py
sliderblend/server/: dependencies.py  main.py  middlewares.py
sliderblend/services/: agents.py  embedding.py
sliderblend/templates/: templates.json
sliderblend/web/: dependencies.py  exception.py  main.py  middlewares.py  schema.py
(+42 files in other folders)
