[project]
name = "sliderblend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.14.0",
    "docx2txt>=0.8",
    "fastapi>=0.115.8",
    "numpy>=2.2.3",
    "pdfplumber>=0.11.5",
    "psycopg>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.43",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
]
