[project]
name = "sliderblend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.14.0",
    "coredis>=4.20.0",
    "docx2txt>=0.8",
    "fastapi>=0.115.8",
    "jinja2>=3.1.6",
    "numpy>=2.2.3",
    "pgvector>=0.4.0",
    "psycopg>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.6",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "alembic>=1.15.2",
    "langchain-text-splitters>=0.3.8",
    "aiogram>=3.20.0.post0",
    "pydantic-ai>=0.2.12",
    "boto3>=1.38.27",
    "ibm-cos-sdk>=2.14.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.24",
]
